[chromium] Fix handling of setNeedsCommit and setNeedsAnimate in threaded mode https://bugs.webkit.org/show_bug.cgi?id=71638

Reviewed by James Robinson.

Source/WebCore:

* platform/graphics/chromium/cc/CCThreadProxy.cpp:
(WebCore::CCThreadProxy::CCThreadProxy):
(WebCore::CCThreadProxy::setNeedsAnimate):
(WebCore::CCThreadProxy::beginFrameAndCommit):

Source/WebKit/chromium:

* tests/CCLayerTreeHostTest.cpp:
(TestHooks::animateAndLayout):
(MockLayerTreeHostClient::animateAndLayout):
(CCLayerTreeHostTest::postSetNeedsAnimateToMainThread):
(CCLayerTreeHostTest::dispatchSetNeedsAnimate):
(CCLayerTreeHostTestSetNeedsAnimate::CCLayerTreeHostTestSetNeedsAnimate):
(CCLayerTreeHostTestSetNeedsAnimate::beginTest):
(CCLayerTreeHostTestSetNeedsAnimate::animateAndLayout):
(CCLayerTreeHostTestSetNeedsAnimate::drawLayersOnCCThread):
(CCLayerTreeHostTestSetNeedsAnimate::afterTest):

Canonical link: https://commits.webkit.org/89209@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100708 268f45cc-cd09-0410-ab3c-d52691b4dbfc